# app/routes/routes.go
@@ -2,6 +2,7 @@ package routes
 
 import (
 	"sms/app/controller"
+	"sms/app/service"
 
 	"github.com/iris-contrib/swagger/v12"
 	"github.com/iris-contrib/swagger/v12/swaggerFiles"
@@ -18,7 +19,7 @@ func Register(app *iris.Application) {
 
 	api := app.Party("/api")
 
-	mvc.New(api.Party("/ping")).Handle(new(controller.PingController))
-	mvc.New(api.Party("/students")).Handle(new(controller.StudentController))
-	mvc.New(api.Party("/test")).Handle(new(controller.TestController))
+	mvc.New(api.Party("/ping")).Handle(new(controller.PingController)).Register(&service.PingService{})
+	mvc.New(api.Party("/students")).Handle(new(controller.StudentController)).Register(&service.StudentService{})
+	mvc.New(api.Party("/test")).Handle(new(controller.TestController)).Register(&service.TestService{})
 }
