# docs/swagger.json
@@ -13,12 +13,35 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/ping/": {
+            "get": {
+                "description": "Ping to get pong",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "ping"
+                ],
+                "summary": "Health check",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/students/": {
             "get": {
                 "description": "Get all students",
-                "consumes": [
-                    "application/json"
-                ],
                 "produces": [
                     "application/json"
                 ],
@@ -31,6 +54,32 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/model.Student"
+                        }
+                    },
+                    "404": {
+                        "description": "Not Found",
+                        "schema": {
+                            "$ref": "#/definitions/response.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/test/": {
+            "get": {
+                "description": "Get test",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "test"
+                ],
+                "summary": "Get test",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/response.SuccessResponse"
                         }
                     },
                     "404": {
@@ -58,7 +107,7 @@
                 }
             }
         },
-        "response.ErrorDetail": {
+        "response.ErrorResponse": {
             "type": "object",
             "properties": {
                 "code": {
@@ -72,14 +121,12 @@
                 }
             }
         },
-        "response.ErrorResponse": {
+        "response.SuccessResponse": {
             "type": "object",
             "properties": {
-                "error": {
-                    "$ref": "#/definitions/response.ErrorDetail"
-                },
-                "success": {
-                    "type": "boolean"
+                "data": {},
+                "message": {
+                    "type": "string"
                 }
             }
         }
