# pkg/response/error.go
@@ -1,14 +1,9 @@
 package response
 
-// ErrorDetail provides information about the error.
-type ErrorDetail struct {
-	Code    int    `json:"code"`
-	Message string `json:"message"`
-	Details string `json:"details,omitempty"`
-}
 
 // ErrorResponse represents a failed API response.
 type ErrorResponse struct {
-	Success bool        `json:"success"`
-	Error   ErrorDetail `json:"error"`
+	Code    int    `json:"code,omitempty"`
+	Message string `json:"message,omitempty"`
+	Details string `json:"details,omitempty"`
 }
